[project]
name = "comfyui-old-photo-restoration"
description = "Perform Bringing-Old-Photos-Back-to-Life"
version = "1.0.1"
license = { text = "MIT License" }
dependencies = [
    "dlib-bin",
    "scikit-image",
    "easydict",
    "dominate",
    "dill",
    "tensorboardX",
    "scipy",
    "opencv-python",
    "einops",
    "matplotlib",
]

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-old-photo-restoration"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Old Photo Restoration"
Icon = ""
