[project]
name = "comfyui-old-photo-restoration"
description = "Perform Bringing-Old-Photos-Back-to-Life"
version = "1.1.2"
license = { text = "MIT License" }
dependencies = [
    "PyYAML",
    "dill",
    "dlib-bin",
    "dominate",
    "easydict",
    "einops",
    "matplotlib",
    "opencv-python",
    "scikit-image",
    "scipy",
    "tensorboardX",
]

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-old-photo-restoration"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Old Photo Restoration"
Icon = ""
